--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,10 +8,12 @@ version: 0.0.1+1
 environment:
   sdk: ^3.1.1
 
+
 dependencies:
   flutter:
     sdk: flutter
-
+  firebase_core: ^2.15.0
+  cloud_firestore: ^4.9.0
   english_words: ^4.0.0
   provider: ^6.0.0
 
